objects/WT_Bank_Officer_Lookup__c.object
<CustomObject>
    <description>This object holds the officer code lookup between source system code and Salesforce User Id</description>
    <fields>
        <fullName>WT_Branch_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Is_User_Active__c</fullName>
        <description>Shows whether the Salesforce user is active or not</description>
        <formula>WT_User__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is User Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Officer_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Officer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Source_System__c</fullName>
        <label>Source System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Encompass</fullName>
                </value>
                <value>
                    <fullName>FIS</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>Wealth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Unique_Officer_Code_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unique Officer Code (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Unique_Officer_Code__c</fullName>
        <formula>IF(TEXT(WT_Source_System__c) = &apos;FIS&apos;, WT_Officer_Code__c + &apos;|&apos; + WT_Branch_Code__c ,
IF(TEXT(WT_Source_System__c) = &apos;Trust&apos;, WT_Branch_Code__c + WT_Officer_Code__c ,
IF(TEXT(WT_Source_System__c) = &apos;Wealth&apos;, WT_Branch_Code__c + WT_Officer_Code__c ,
IF(TEXT(WT_Source_System__c) = &apos;Encompass&apos;, WT_Officer_Code__c , WT_Officer_Code__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Officer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_User_Full_Name_Formula__c</fullName>
        <formula>WT_User__r.FirstName + &apos; &apos; +  WT_User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Full Name (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_User_Full_Name_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User Full Name (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bank_Officer_Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bank Officer Lookup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WT_Branch_Code__c</columns>
        <columns>WT_Officer_Code__c</columns>
        <columns>WT_Source_System__c</columns>
        <columns>WT_Is_User_Active__c</columns>
        <columns>WT_Unique_Officer_Code_Text__c</columns>
        <columns>WT_User_Full_Name_Text__c</columns>
        <columns>WT_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Bank Officer Lookup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Officer Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>